--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <center><h3>Powered by OpenSpeedTest</h3></center>
    <center><h4>The speedtest with no ads.</h4></center>
    <center><a href="https://github.com/thedoggybrad/ADKILLED-OPENSPEEDTEST.COM">About us</a></center>
-   <div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=en&th=w"></iframe></div>
+   <div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div>
+
       </body>
 </html>
