--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>ADKILLED-OPENSPEEDTEST.COM - Speedtest with no ads</title>
-      <link rel="shortcut icon" type="image/jpg" href=https://thedoggybrad.github.io/speedtest/favico.png?/>
+      <link rel="shortcut icon" type="image/jpg" href=favico.png?/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
       <body>
