--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <body style="background-color:white;">
       <title>ADKILLED-OPENSPEEDTEST.COM - Speedtest with no ads</title>
       <link rel="shortcut icon" type="image/jpg" href=favico.png?/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
