--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>ADKILLED-OPENSPEEDTEST.COM - Speedtest with no ads</title>
          <body style="background-color:white;">
-      <link rel="shortcut icon" type="image/jpg" href=favico.png?/>
+      <link rel="shortcut icon" type="image/png" href=favico.png?/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
    <center><h1>ADKILLED-OPENSPEEDTEST.COM</h1></center>
    <center><h3>Powered by OpenSpeedTest</h3></center>
