--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
          <body style="background-color:white;">
       <link rel="shortcut icon" type="image/png" href=https://thedoggybrad.github.io/ADKILLED-OPENSPEEDTEST.COM/favico.png/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-   <center><h1>ADKILLED-OPENSPEEDTEST.COM</h1></center>
-   <center><h3>Powered by OpenSpeedTest</h3></center>
-   <center><h4>The speedtest with no ads.</h4></center>
-   <center><a href="https://github.com/thedoggybrad/ADKILLED-OPENSPEEDTEST.COM">About us</a></center>
-   </head>
+   <div class="center">
+<h1>ADKILLED-OPENSPEEDTEST.COM</h1>
+   <h3>Powered by OpenSpeedTest</h3>
+   <h4>The speedtest with no ads.</h4>
+   <a href="https://github.com/thedoggybrad/ADKILLED-OPENSPEEDTEST.COM">About us</a></div>
+   <style>
+.center {text-align: center}
+</style>
+</head>
       <body>
    <div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div>
 
