--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 </head>
       <body>
-   <div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:relative;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div>
+   <div style="position:relative;"><iframe style="border:none;position:relative;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div>
 
       </body>
 </html>
