--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </style>
 </head>
       <body>
-   <div style="position:relative;"><iframe style="border:none;position:relative;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div>
+   <div style="position:relative;"><iframe <iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;justify-content: center; 
+align-items: center;" src="//openspeedtest.com/speedtest"></iframe>
 
       </body>
 </html>
