--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 </head>
       <body>
-   <div style="position:relative;"><iframe <iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;justify-content: center; 
+   <iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;justify-content: center; 
 align-items: center;" src="//openspeedtest.com/speedtest"></iframe>
 
       </body>
