--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="shortcut icon" type="image/png" href=https://thedoggybrad.github.io/ADKILLED-OPENSPEEDTEST.COM/favico.png/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
    <div class="center">
-<h1>ADKILLED-</h1><h1>OPENSPEEDTEST.COM</h1>
+<h1>ADKILLED-OPEN</h1></h1>SPEEDTEST.COM</h1>
    <h3>Powered by OpenSpeedTest</h3>
    <h4>The speedtest with no ads.</h4>
    <a href="https://github.com/thedoggybrad/ADKILLED-OPENSPEEDTEST.COM">About us</a></div>
@@ -15,7 +15,7 @@
 </style>
 </head>
       <body>
-   <iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;justify-content: center; 
+   <iframe style="border:none;position:relative;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;justify-content: center; 
 align-items: center;" src="//openspeedtest.com/speedtest"></iframe>
 
       </body>
